kesabaran updated (sofita: 63)